--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -14,7 +14,7 @@
 
     <div style="width: 300px; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); transition: 0.3s; background: linear-gradient(to right, #ffecd2, #fcb69f); overflow: hidden;">
         <div style="padding: 10px; background-color: rgba(255, 255, 255, 0.8); border-bottom: 1px solid #eee; text-align: center;">
-            <h2 style="margin: 0; font-size: 1.5em;">title</h2>
+            <h2 style="margin: 0; font-size: 1.5em;">{{post.title}}</h2>
             </div>
             <div style="padding: 20px; text-align: center;">
                 <p style="margin: 0;">{{post.content}} </p>
