--- a/myapp/templates/Forms.html
+++ b/myapp/templates/Forms.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <h1>Create a New Post</h1>
-        <form method="POST" action="/admin/">
+        <form method="POST" action="">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Submit</button>
